Add authentication to certain endpoints
